attempting checkbox add to purchase